# convert-reel-to-recipe

./: .gitignore  CHANGELOG.md  MANIFEST.in  PACKAGE_COMPLETE.md  QUICK_REFERENCE.md  README.md  SETUP.md  example.py  pyproject.toml  requirements.txt
src/crtr/: __init__.py  cli.py  convert_video_to_audio.py  converter.py  generate_recipe_with_ai.py  prompt.py  transcribe_audio.py
tests/: test_converter.py
